<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newsapp.ui.bbc.HomeFragment"
        android:label="@string/bbc"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.newsapp.ui.aljazera.GalleryFragment"
        android:label="@string/aljazera"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.newsapp.ui.cnn.SlideshowFragment"
        android:label="@string/cnn"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/foxnews"
        android:name="com.example.newsapp.fragment.foxnews"
        android:label="@string/foxnews"
        tools:layout="@layout/fragment_foxnews" />
    <fragment
        android:id="@+id/time"
        android:name="com.example.newsapp.fragment.time"
        android:label="@string/time"
        tools:layout="@layout/fragment_time" />
</navigation>