<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/bbc"
            android:title="@string/bbc"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/aljazera"
            android:menuCategory="secondary"
            android:title="@string/aljazera" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/cnn"
            android:title="@string/cnn"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/foxnews"
            android:icon="@drawable/foxnews"
            android:title="@string/foxnews"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/time"
            android:icon="@drawable/time"
            android:title="@string/time"
            android:menuCategory="secondary"/>
    </group>
    <item android:title="Upcomming..."
        android:menuCategory="secondary">
        <menu>
            <item
                android:id="@+id/skynews"
                android:icon="@drawable/skynews"
                android:title="Sky News"
                />
        </menu>
    </item>
</menu>